# Chunimai-tracker

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  init.sql  main.py  pyproject.toml  run.sh
.github/workflows/: docker-publish.yml  schedule.yml
alembic/: env.py
alembic/versions/: 001_init.py  002_add_scrape_failure.py
play_counter/: config.py  db.py  scraper.py
play_counter/reports/: weekly.py
