[project]
name = "chunimai-spend-tracker"
version = "1.0.0"
description = "A project that track your playcount and rating on maimai and chunithm"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asyncpg>=0.30.0",
    "envparse>=0.2.0",
    "playwright>=1.52.0",
    "requests>=2.32.4",
]

[dependency-groups]
dev = [
    "pytest-playwright>=0.7.2",
]
